Fix KP alignment?

--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,8 @@ body {
 
     .home__name-container {
         text-align: center;
+        justify-content: center;
+        align-items: center;
     }
 
     .home__name {
